feat: use uuid for redis key and rework some client with discovery document api